--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <style>
     :root{--cell:32px;--stone:26px}
     body{font-family:sans-serif;margin:0;padding:1rem;display:flex;flex-direction:column;align-items:center;background:#faf5e7}
-    #board{display:grid;grid-template-columns:repeat(15,var(--cell));grid-template-rows:repeat(15,var(--cell));border:2px solid #222;background:#e3b778;margin-top:.5rem}
-    .cell{width:var(--cell);height:var(--cell);background:#e3b778;border:1px solid #000;position:relative;display:flex;align-items:center;justify-content:center}
+    #board{display:grid;grid-template-columns:repeat(15,var(--cell));grid-template-rows:repeat(15,var(--cell));grid-gap:1px;padding:1px;background:#000;border:2px solid #222;margin-top:.5rem}
+    .cell{width:var(--cell);height:var(--cell);background:#e3b778;position:relative;display:flex;align-items:center;justify-content:center}
     .cell:hover{background:rgba(255,255,255,.3);cursor:pointer}
     .stone{border-radius:50%;width:var(--stone);height:var(--stone);pointer-events:none}
     .black{background:#000}.white{background:#fff;border:1px solid #000}
