--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        repeating-linear-gradient(0deg,#000 0 1px,transparent 1px var(--cell)),
        repeating-linear-gradient(90deg,#000 0 1px,transparent 1px var(--cell)),
        #e3b778;border:2px solid #000;display:grid;grid-template-columns:repeat(15,1fr);grid-template-rows:repeat(15,1fr);margin-top:.5rem}
-    .cell{width:var(--cell);height:var(--cell);background:#e3b778;position:relative;display:flex;align-items:center;justify-content:center}
+    .cell{width:100%;height:100%;background:transparent;position:relative;display:flex;align-items:center;justify-content:center}
     .cell:hover{background:rgba(255,255,255,.3);cursor:pointer}
     .stone{border-radius:50%;width:var(--stone);height:var(--stone);pointer-events:none}
     .black{background:#000}.white{background:#fff;border:1px solid #000}
